--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/blue logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo&family=Noto+Sans+Arabic&display=swap"
+      rel="stylesheet"
+    />
     <title>Raghwa</title>
   </head>
   <body>
